--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     <span class="text">R$ 45,90 por mês*</span>
                 </li>
                 <li class="hero__content__combos__combo">
-                    <img src="./dist/images/logos/disney_star_plus.png" alt="Star Plus">
+                    <img src="./dist/images/logos/disney_star_plus_starzplay.png" alt="Star Plus">
                     <button class="button">ASSINE AGORA</button>
-                    <span class="text">R$ 45,90 por mês*</span>
+                    <span class="text">R$ 55,90 por mês*</span>
                 </li>
             </ul>
             <p class="text--small">
@@ -72,19 +72,19 @@
                 <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/em_breve/desencantada.jpg" alt="Desencantada">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/em_breve/lobisomem.jpg" alt="Lobisomem">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/em_breve/sem_limites.jpg" alt="Sem Limites">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/em_breve/the_santa_clauses.jpg" alt="Natal">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/em_breve/willow.jpg" alt="Willow">
             </li>
         </ul>
         <ul data-tab-id="populares" class="shows__list">
@@ -92,19 +92,19 @@
                 <img src="./dist/images/mais_populares/obi_wan.jpg" alt="Obi Wan">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/mais_populares/bluey.jpg" alt="Bluey">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/mais_populares/cavaleira_da_lua.jpg" alt="Cavaleira">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/mais_populares/o_incrivel_dr_pol.jpg" alt="DR Pol">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/mais_populares/red.jpg" alt="Red">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/mais_populares/tudo_igual_sqn.jpg" alt="Tudo Igual">
             </li>
         </ul>
         <ul data-tab-id="star_plus" class="shows__list">
@@ -112,19 +112,19 @@
                 <img src="./dist/images/mais_no_star_plus/libertadores.jpg" alt="Libertadores">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/mais_no_star_plus/belair.jpg" alt="BelAir">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/mais_no_star_plus/nba.jpg" alt="NBA">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/mais_no_star_plus/os_simpson.jpg" alt="Simpsons">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/mais_no_star_plus/premier_league.jpg" alt="Premier League">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+                <img src="./dist/images/mais_no_star_plus/the_kardashians.jpg" alt="Kardashians">
             </li>
         </ul>
     </section>
